<resources>
    <string name="app_name">DonorApp</string>
    <string name="google_map_api_key">AIzaSyDAmv2cnlP-wQz8MRmKAgW-5U-U0NwfCns</string>
    <string name="home">Home</string>
    <string name="donate">Donate</string>
    <string name="requests">Requests</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_user">Hello User!</string>
    <string name="emergency_sos">EMERGENCY SOS</string>
    <string name="active_requests">Active Requests</string>
    <string name="make_a_donation">Make a donation</string>
    <string name="blood">Blood</string>
    <string name="organs">Organs</string>
    <string name="money">Money</string>
    <string name="medicine">Medicine</string>
    <string name="active_donation_requests">Active donation requests</string>
    <string name="donate_now">Donate Now</string>
    <string name="name">Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="donation_streak">Donation Streak</string>
    <string name="donation_history">Donation History</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="donation_requests">Donation Requests</string>
    <string name="recipient">Recipient</string>
    <string name="find_a_donor">Find a Donor</string>
    <string name="full_name">Full Name</string>
    <string name="blood_group_e_g_o">Blood Group (e.g., O+)</string>
    <string name="location">Location</string>
    <string name="register_as_recipient">Register as Recipient</string>
    <string name="search_donor_by_blood_type">Search Donor by Blood Type</string>
    <string name="filter">Filter</string>
    <string name="recipients_list">Recipients List</string>
    <string name="emergency_request">Emergency Request</string>
    <string name="whatisyourname">Your Name?</string>
    <string name="enter">Enter</string>
    <string name="address">Your Address</string>
    <string name="city">city name</string>
    <string name="number">Mobile Number</string>
    <string name="entervalidnumber">Enter valid number</string>
    <string name="bloodtype">Bloodtype?</string>
    <string name="donateionquote">We make a living by what we get, but we make a life by what we give.\n</string>

    <string name="SignIn">SignIn</string>
    <string name="Register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forget Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="enter_name">Enter Name</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="emergency_request_details">Emergency Request Details</string>
    <string name="Location">Location:Hospital address</string>
    <string name="contact_hospital">Hospital contact</string>
    <string name="submit">Submit</string>
    <string name="Requirement">Requirement</string>
    <string name="Hospital_loaction">Hospital Location</string>
    <string name="Contact_Number">Contact number</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="enter_recipient_name">Enter Recipient Name</string>
    <string name="enter_hospital_contact">Enter Hospital Contact</string>
    <string name="search">Search</string>
    <string name="Delete_acc">Delete Account</string>

    <string name="select_Urgency">Select Urgency</string>

    <string name="enter_aadhaar_no">Enter Aadhaar No.</string>
    <string name="enter_your_medicine_type">Enter Your Medicine Name</string>
    <string name="enter_money">Enter Amount Required</string>
    <string name="chooseme">Choose Me!</string>
    <string name="addresss">Address</string>

    <string name="donationtype">Donation Type :</string>
    <string name="date">Date :</string>
    <string name="mydonation">My donation</string>
    <string name="all">All</string>
    <string name="default_notification_channel_id">donor_alerts</string>
    <string name="Enter_date">Enter Date</string>
    <string name="Name">Name</string>
    <string name="update">Update</string>
<!--    <string-array name="blood_types">-->
<!--        <item>A+</item>-->
<!--        <item>A-</item>-->
<!--        <item>B+</item>-->
<!--        <item>B-</item>-->
<!--        <item>AB+</item>-->
<!--        <item>AB-</item>-->
<!--        <item>O+</item>-->
<!--        <item>O-</item>-->
<!--    </string-array>-->
    <string-array name="gender_types">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
<!--    <string-array name="organ_types">-->
<!--        <item>kidney</item>-->
<!--        <item>Heart</item>-->
<!--        <item>Eyes</item>-->
<!--    </string-array>-->
    <string-array name="payment_methods">
        <item>Select Payment Method</item>
        <item>UPI</item>
        <item>Bank Transfer</item>
        <item>Cash</item>
        <item>Cheque</item>
        <item>Credit Card</item>
        <item>Debit Card</item>
    </string-array>
    <string name="hi">HI! </string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="haemoglobin">Hemoglobin</string>
    <string name="bloodPressure">Blood Pressure</string>
    <string name="pulserate">Pulse Rate</string>
    <string name="Add_details">Add Health Details</string>
</resources>


