<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16"
    android:background="@color/light_bg"
    android:orientation="vertical"
    tools:context=".recipient.RecipientFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_a_donor"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

    <!-- Recipient Registration Form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/neumorphic_card"
        android:orientation="vertical"
        android:padding="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10">

        <EditText
            android:id="@+id/et_recipient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:background="@drawable/neumorphic_edittext"
            android:padding="@dimen/dp_10"/>

        <EditText
            android:id="@+id/etRecipientBloodGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/blood_group_e_g_o"
            android:background="@drawable/neumorphic_edittext"
            android:padding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_8"/>

        <EditText
            android:id="@+id/etRecipientLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:background="@drawable/neumorphic_edittext"
            android:padding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_8"/>

        <Button
            android:id="@+id/btnRegisterRecipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_as_recipient"
            android:background="@drawable/neumorphic_button"
            android:textColor="@color/black"
            android:padding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"/>
    </LinearLayout>

    <!-- Search & Filters -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10">

        <EditText
            android:id="@+id/etSearchDonor"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/search_donor_by_blood_type"
            android:background="@drawable/neumorphic_edittext"
            android:padding="@dimen/dp_10"/>

        <Button
            android:id="@+id/btnFilterDonors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:background="@drawable/neumorphic_button"
            android:textColor="@color/black"
            android:padding="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_8"/>
    </LinearLayout>

    <!-- Recipient List -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipients_list"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_10"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"/>

    <!-- Emergency Request Button -->
    <Button
        android:id="@+id/btnEmergencyRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_request"
        android:background="@drawable/neumorphic_red_button"
        android:textColor="@color/white"
        android:padding="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_10"/>

</LinearLayout>