<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bg"
    android:orientation="vertical"
    android:padding="@dimen/dp_16"
    tools:context=".donate.DonateFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/make_a_donation"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="2">

        <!-- Blood Donation -->
        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/neumorphic_card"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_bloodtype_24"
                app:tint="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <!-- Organ Donation -->
        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/neumorphic_card"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_local_hospital_24"
                app:tint="@color/green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organs"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <!-- Money Donation -->
        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/neumorphic_card"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_attach_money_24"
                app:tint="@color/yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <!-- Medicine Donation -->
        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/neumorphic_card"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_medical_services_24"
                app:tint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicine"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

    </GridLayout>

    <!-- Active Donation Requests -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/active_donation_requests"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRequests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8" />

    <!-- Call to Action Button -->
    <Button
        android:id="@+id/btnDonateNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/neumorphic_red_button"
        android:text="@string/donate_now"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>