<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bg"
    android:orientation="vertical"
    android:padding="@dimen/dp_16"
    tools:context=".home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/neumorphic_card"
        android:elevation="@dimen/dp_8"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_16">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/neumorphic_circle"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_24" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:text="@string/hello_user"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSos"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/neumorphic_red_button"
        android:text="@string/emergency_sos"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/active_requests"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRequests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8" />

</LinearLayout>